Change 'Terms of Service' to 'Terms of Use (EULA)'

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </p>
     <div class="links">
       <a href="privacy-policy.html">Privacy Policy</a>
-      <a href="terms-of-service.html">Terms of Service</a>
+      <a href="terms-of-service.html">Terms of Use (EULA)</a>
     </div>
     <p class="contact">
       Contact: <a href="mailto:Nikkigrindel@gmail.com">Nikkigrindel@gmail.com</a>
