Revise privacy policy with updated information
Updated the last updated date and added details about account deletion and data management.

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -29,7 +29,7 @@
   <div class="container">
     <a href="index.html" class="back">&larr; Back to Inzones</a>
     <h1>Privacy Policy</h1>
-    <p class="updated">Last updated: February 14, 2026</p>
+    <p class="updated">Last updated: February 18, 2026</p>
 
     <h2>Introduction</h2>
     <p>
@@ -59,13 +59,36 @@
     </p>
     <ul>
       <li>Your saved USDA hardiness zone (if you choose to save it)</li>
-      <li>The zip code or city name you searched for</li>
+      <li>Your garden planting plan (if you are signed in and have added plants)</li>
       <li>App preferences</li>
       <li>Subscription status (active plan type and expiration)</li>
+      <li>If you sign in: your display name, email (if provided), and provider (Apple or Google) for account identification only</li>
     </ul>
     <p>
-      You can delete all locally stored data at any time by using the "Clear"
-      button in the Settings tab, or by uninstalling the App.
+      You can clear your saved zone using the "Clear" button in Settings. To
+      delete all app data associated with your account, including sign-in and
+      subscription cache, use "Delete Account" in Settings under Account when
+      signed in. Uninstalling the App also removes all locally stored data.
+    </p>
+
+    <h2>Account Deletion</h2>
+    <p>
+      Because the App supports account creation (sign-in with Apple or Google),
+      we also provide an option to initiate account deletion so you have
+      control over the data you have shared while using the App.
+    </p>
+    <p>
+      To delete your account and all app data from this device: open the App,
+      go to Settings, then under the Account section tap "Delete Account."
+      After you confirm, we remove from this device your stored sign-in profile,
+      saved zone, garden plan, and subscription status cache. You will be signed
+      out. Account deletion is permanent for this device and cannot be undone.
+    </p>
+    <p>
+      Deleting your account in the App does not delete your Apple ID or Google
+      account. To manage or delete your Apple identity, visit
+      appleid.apple.com. To manage or delete your Google account data, visit
+      myaccount.google.com.
     </p>
 
     <h2>Offline Operation</h2>
