Update Terms of Service to Terms of Use (EULA)

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Terms of Service - Inzones</title>
+  <title>Terms of Use (EULA) - Inzones</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
@@ -28,14 +28,15 @@
 <body>
   <div class="container">
     <a href="index.html" class="back">&larr; Back to Inzones</a>
-    <h1>Terms of Service</h1>
-    <p class="updated">Last updated: February 14, 2026</p>
+    <h1>Terms of Use (EULA)</h1>
+    <p class="updated">Last updated: February 18, 2026</p>
 
     <h2>1. Acceptance of Terms</h2>
     <p>
       By downloading, installing, or using Inzones ("the App"), you agree to be
-      bound by these Terms of Service ("Terms"). If you do not agree to these
-      Terms, do not use the App.
+      bound by these Terms of Use ("Terms"), also referred to as the End-User
+      License Agreement (EULA). If you do not agree to these Terms, do not use the
+      App.
     </p>
 
     <h2>2. Description of Service</h2>
@@ -161,7 +162,26 @@
       after changes constitutes acceptance of the new Terms.
     </p>
 
-    <h2>12. Termination</h2>
+    <h2>12. Account Deletion</h2>
+    <p>
+      Because the App supports account creation (sign-in with Apple or Google),
+      we provide an option to initiate account deletion so you have control
+      over the data you have shared while using the App.
+    </p>
+    <p>
+      To delete your account and all app data from this device: open the App,
+      go to Settings, then under the Account section tap "Delete Account."
+      After confirmation, the App will remove from this device your stored
+      sign-in profile, saved zone, garden plan, and subscription status cache,
+      and you will be signed out.
+    </p>
+    <p>
+      Deleting your account in the App does not delete your Apple ID or Google
+      account. To manage or delete your Apple identity, visit appleid.apple.com.
+      To manage or delete your Google account data, visit myaccount.google.com.
+    </p>
+
+    <h2>13. Termination</h2>
     <p>
       You may stop using the App at any time by uninstalling it from your
       device. Upon uninstallation, all locally stored data will be removed.
@@ -170,15 +190,15 @@
       subscription.
     </p>
 
-    <h2>13. Governing Law</h2>
+    <h2>14. Governing Law</h2>
     <p>
       These Terms shall be governed by and construed in accordance with the laws
       of the jurisdiction in which the developer resides, without regard to
       conflict of law principles.
     </p>
 
-    <h2>14. Contact Us</h2>
-    <p>If you have any questions about these Terms of Service, please contact us at:</p>
+    <h2>15. Contact Us</h2>
+    <p>If you have any questions about these Terms of Use, please contact us at:</p>
     <p><a href="mailto:Nikkigrindel@gmail.com" class="contact-email">Nikkigrindel@gmail.com</a></p>
   </div>
 </body>
