Revise Contact Us section with developer details
Updated the contact section to include developer information.

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -197,9 +197,16 @@
       conflict of law principles.
     </p>
 
-    <h2>15. Contact Us</h2>
-    <p>If you have any questions about these Terms of Use, please contact us at:</p>
+    <h2>15. Contact Us / Developer</h2>
+    <p>Inzones is developed by the developer listed below. If you have any questions about these Terms of Use, please contact us at:</p>
     <p><a href="mailto:Nikkigrindel@gmail.com" class="contact-email">Nikkigrindel@gmail.com</a></p>
+    <p><strong>Developer name and address:</strong></p>
+    <p>
+      Inzones<br>
+      15004 S Rosehill Rd<br>
+      Olathe, KS 66062-9478<br>
+      United States
+    </p>
   </div>
 </body>
 </html>
